# bookman

./: Cargo.toml  README.md
src/: main.rs  object.rs  templates.rs
templates/: base.html  bookmark-edit.html  bookmark.html  bookmarks.html  index.html
