[package]
name = "bookman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = "0.7.4"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
surrealdb = "1.3.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.0", features = ["serde"] }
